styles.css
/*Fonts
font-family: 'Quicksand', sans-serif;
font-family: 'Righteous', cursive;
font-family: 'Crushed', cursive;
font-family:

Pattern taken from - http://www.heropatterns.com/
*/

/* Current attributes are for dimension 1080 x 714. A stretch limit is needed to keep all cards above the lower vertical cutoff */

.page_wrapper{
  /*border: solid;*/
  max-width: 1034px;
  margin-top: 1%;
  font-family: wingdings;
  font-size: 8.832vw; /* was 8.8vw */
  background-color: #F9F2E4;
  width: 95%; /*  70% may be better for wider views: */;
  height: 98vh;
  text-align: center;
  margin: 0 auto;
  position: relative;
}


h1 {
  font-family: 'Righteous', sans-serif;
  font-size: 1.4em;
  color: #7C8DD5;
  display: inline;
  margin: 1% 0 1% 0;
  text-align: start;
}

h5{
  display: inline;
  font-size: 0.5em;
  color: #7C8DD5;
  margin: 0;
}

h3{
  font-family: 'Quicksand', sans-serif;
  color: #7C8DD5;
  display: inline;
  margin: 0;
}

#header_container h3 {
  text-align: end;
  font-size: 0.6em;
}

#header_container .htag_holder h3{
  text-align: end;
  font-size: 0.3em;
}

#display_column_align h3{
  font-size: 0.6em;
  width: 60%;
}

/******Cluster Header Styling boxes here ************/

header {
  /*margin: 5% 0 2.5% 0;*/
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  text-align: center;
}

.header_game_time{
  grid-template-columns: repeat(4, 70px);
  grid-template-rows: repeat(3, 10px);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

.htag_holder{
  grid-column: 1/ span 3;
  grid-row: 1 /span 3;
}

#timer_display{
  grid-column: 4;
  grid-row: 3;
}

#symbols img{
  width: 30%;
  /*margin-bottom: -20px;*/
}


#symbols {
  display: grid;
  grid-template-columns: repeat(4, 70px);
  grid-template-rows: repeat(9, 10px);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}
.one {
  grid-column: 2/ span 2;
  grid-row: 1 /span 3;
}

.two {
  grid-column: 1 /span 2;
  grid-row: 3;
}
.three {
  grid-column: 2 /span 2;
  grid-row: 5;
}
.four {
    grid-column: 3 /span 2;
    grid-row: 3;
}
.five {
  grid-column: 3 /span 2;
  grid-row: 8 /span 2;
}
.six {
  visibility:hidden;
  grid-column: 3 /span 2;
  grid-row: 10 ;
}

.seven {
  grid-column: 1 /span 2;
  grid-row: 8;
}

.eight {
  /*visibility:hidden;*/
  grid-column: 2 /span 2;
  grid-row: 10 ;
}


.htag_holder{
  display: flex;
  /*align-items: space-around; << seems to not be allowed ??? */
  flex-direction: column;
  width: 40%;
  /*text-align: justify; positioning styles were placed on h1 and h3 instead of here*/
}



/******Cluster Game Board Grad Styling boxes here ************/

#display_column_align{
  margin-top: 10%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 50%;
  background-color: #F9F2E4;
}

#gameboard_wrapper {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  flex-direction: row;
}

.start_button{
  font-family: 'Righteous', sans-serif;
  font-size: 1.3em;
  color: #7C8DD5;
  width: 60%;
  margin: 30px;
  padding: 8px 0px;
  border-color: #7C8DD5;
  border-width: 2px;
  border-style: dotted;
  border-radius: 5px;
}

.game_over{
  font-family: 'Righteous', sans-serif;
  font-size: 1.2em;
  color: #7C8DD5;
  margin: 0 auto;
  margin-top: 30px;
}

img {
    width: 80%;
    height: auto;
}

.singleCard{
  /*padding: 0.8vh; /* 0.9vh */*/
  padding: 5% 0 5% 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0.1%; /* 2.8% */
  flex: 0 0 10%;
  border-radius: 5px;
  border: 2px solid;
}

.facedown{
  color: transparent;
  background-color: #f9f2e4;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='52' height='52' viewBox='0 0 52 52'%3E%3Cpath fill='%23082fc7' fill-opacity='0.52' d='M0 17.83V0h17.83a3 3 0 0 1-5.66 2H5.9A5 5 0 0 1 2 5.9v6.27a3 3 0 0 1-2 5.66zm0 18.34a3 3 0 0 1 2 5.66v6.27A5 5 0 0 1 5.9 52h6.27a3 3 0 0 1 5.66 0H0V36.17zM36.17 52a3 3 0 0 1 5.66 0h6.27a5 5 0 0 1 3.9-3.9v-6.27a3 3 0 0 1 0-5.66V52H36.17zM0 31.93v-9.78a5 5 0 0 1 3.8.72l4.43-4.43a3 3 0 1 1 1.42 1.41L5.2 24.28a5 5 0 0 1 0 5.52l4.44 4.43a3 3 0 1 1-1.42 1.42L3.8 31.2a5 5 0 0 1-3.8.72zm52-14.1a3 3 0 0 1 0-5.66V5.9A5 5 0 0 1 48.1 2h-6.27a3 3 0 0 1-5.66-2H52v17.83zm0 14.1a4.97 4.97 0 0 1-1.72-.72l-4.43 4.44a3 3 0 1 1-1.41-1.42l4.43-4.43a5 5 0 0 1 0-5.52l-4.43-4.43a3 3 0 1 1 1.41-1.41l4.43 4.43c.53-.35 1.12-.6 1.72-.72v9.78zM22.15 0h9.78a5 5 0 0 1-.72 3.8l4.44 4.43a3 3 0 1 1-1.42 1.42L29.8 5.2a5 5 0 0 1-5.52 0l-4.43 4.44a3 3 0 1 1-1.41-1.42l4.43-4.43a5 5 0 0 1-.72-3.8zm0 52c.13-.6.37-1.19.72-1.72l-4.43-4.43a3 3 0 1 1 1.41-1.41l4.43 4.43a5 5 0 0 1 5.52 0l4.43-4.43a3 3 0 1 1 1.42 1.41l-4.44 4.43c.36.53.6 1.12.72 1.72h-9.78zm9.75-24a5 5 0 0 1-3.9 3.9v6.27a3 3 0 1 1-2 0V31.9a5 5 0 0 1-3.9-3.9h-6.27a3 3 0 1 1 0-2h6.27a5 5 0 0 1 3.9-3.9v-6.27a3 3 0 1 1 2 0v6.27a5 5 0 0 1 3.9 3.9h6.27a3 3 0 1 1 0 2H31.9z'%3E%3C/path%3E%3C/svg%3E");
  border: 2px solid #7C8DD5;
}

.facedown_image{
  visibility: hidden;
}

.faceup_image{
  visibility: visible;
}

.faceup, .leave_faceup{
  background-color: #f9f2e4;
  color: #7C8DD5;
}

@media screen and (min-width: 760px){
  .page_wrapper {
    margin-top: 0.2%;
    font-size: 5.8vw;
  }

  .singleCard {
    padding: 1.7vh;
    margin: 1.4%;
  }

  header {
    /*margin: 2% 0 2% 0;*/
  }
}

